// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reflexbox Supports "fontScale" in "sx" prop 1`] = `
.c0 {
  font: 1.4rem / 2.4rem "Open Sans";
}

@media screen and (min-width:576px) {
  .c0 {
    font: 1.2rem / 1.6rem "Open Sans";
  }
}

<div
  class="c0"
/>
`;

exports[`Reflexbox Supports "sx" prop 1`] = `
.c0 {
  background-color: rgb(255,229,197);
  color: rgb(255,151,23);
  border-color: #fab;
}

@media screen and (min-width:576px) {
  .c0 {
    background-color: rgb(248,249,253);
    color: rgb(8,191,130);
  }
}

<div
  class="c0"
/>
`;

exports[`Reflexbox Works with styled-components 1`] = `
.c0 {
  color: rgb(8,191,130);
  padding: 15px 30px;
  opacity: 1;
  font: 1.8rem / 2.4rem "Open Sans";
}

.c1 {
  padding-right: 45px;
  z-index: 2;
}

<div>
  <div
    class="c0 c1"
  />
</div>
`;

exports[`Reflexbox Works with styled-components 2`] = `
.c0 {
  color: rgb(8,191,130);
  padding: 15px 30px;
  opacity: 1;
  font: 1.8rem / 2.4rem "Open Sans";
  margin: 20px 0;
}

.c1 {
  padding-right: 45px;
  z-index: 2;
}

<div>
  <div
    class="c0 c1"
  />
</div>
`;

exports[`Reflexbox Works with styled-components 3`] = `
.c0 {
  color: rgb(8,191,130);
  padding: 15px 30px;
  opacity: 1;
  padding-right: 60px;
  margin: 5px;
  z-index: 5;
  font: 2rem / 2.4rem "Open Sans";
  margin: 20px 0;
}

<div>
  <div
    class="c0"
  />
</div>
`;
